--- a/pom.xml
+++ b/pom.xml
@@ -155,8 +155,7 @@
         <dependency>
             <groupId>org.directwebremoting</groupId>
             <artifactId>dwr</artifactId>
-            <!--<version>3.0.0-rc2</version>-->
-            <version>3.0.0-rc3-SNAPSHOT</version>
+            <version>3.0.0-rc2</version>
         </dependency>
         <dependency>
             <groupId>commons-lang</groupId>
